Fix Dark Mode UI Issue HOME Page PLP and PDP Page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17455,3 +17455,6 @@ body:has(.px-4.pt-16.pb-24.bg-white.sm\:px-6.sm\:pt-24.lg\:px-8.lg\:py-32) {
     margin-top: -85px !important;
   }
 }
+.rc-slider-mark-text-active{
+  @apply dark:!text-white;
+}
